2005-08-30  Matthew Gregan  <kinetik@orcon.net.nz>

	* revision.cc (ensure_parents_loaded): Don't reuse an iterator
	after we've invalidated it.  Fixes 'diff' crash reported by Howard
	Spindel.

2005-08-30  Matt Johnston  <matt@ucc.asn.au>

	* botan/allocate.cpp: avoid string comparison when looking up the 
	default allocator
	* monotone.cc (cpp_main): set a default allocator

2005-08-28  Nathaniel Smith  <njs@pobox.com>

	* tests/t_attributes.at: Delete checkout dir in between
	checkouts.

2005-08-28  Matt Johnston  <matt@ucc.asn.au>

	* keys.cc (keys_match): new function to compare whether two keys
	match (ignoring whitespace as the database does, etc).
	* packet.cc, keys.cc: use it for existing-key-comparison.

2005-08-27  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (checkout): Special-case "checkout ."
	* tests/t_checkout_dir.at: Test it.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* file_io.hh: Remove comment describing old path types.
	* paths.hh: Add comment describing new path types.
	
2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* app_state.cc (create_working_copy): Remove
	fs::filesystem_exception catching.
	* file_io.hh (mkdir_p): Remove comment noting app_state.cc's
	dependence on a boost-based implementation.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* paths.cc: Include <string>.  Helps build on g++ 3.3?

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (get_log_message): Make the log message commentary a
	little more descriptive for people who may not know what a log
	message is...
	(commit): When canceling a commit due to empty log message, say
	so.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* std_hooks.lua: Check for both "vi" and "notepad.exe" as fallback
	editors.  If no editor was found, print a helpful message instead
	of just running "vi" anyway.  Print a message if the editor exited
	with error.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (mkdir_p, make_dir_for): Increase error checking.